...
        android:id="@+id/register_button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_blue_light"
        android:text="register"
        app:layout_constraintEnd_toEndOf="@+id/already_have_account_textview_register"
        app:layout_constraintStart_toStartOf="@+id/already_have_account_textview_register"
        app:layout_constraintTop_toBottomOf="@+id/password_edittext_register" />

    <TextView
        android:id="@+id/already_have_account_textview_register"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:text="Already have an account?"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/password_edittext_register"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/password_edittext_register"
        app:layout_constraintTop_toBottomOf="@+id/register_button_register" />

...
