<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="nikolas.example.com.coinz.MainActivity">
    <item
        android:id="@+id/action_lead"
        android:icon="@drawable/lead"
        android:title="action_lead"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_friends"
        android:icon="@drawable/friends"
        android:title="action_friends"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_goal"
        android:icon="@drawable/goal"
        android:title="action_goal"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_wand"
        android:icon="@drawable/wand"
        android:title="action_wand"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_signout"
        android:icon="@drawable/signout2"
        android:title="action_signout"

        app:showAsAction="always"/>
</menu>
